Closed Bug 511718 Opened 15 years ago Closed 15 years ago

Fix compiler warnings about redefining LOG in necko

Categories

(Core :: Networking, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: jduell.mcbugs, Assigned: jduell.mcbugs)

Details

Attachments

(1 file)

Very minor, simple fix (no sr needed):

We #define LOG() differently in various places in necko.  One file--netwerk/build/nsNetModule doesn't actually even use the macro, but winds up seeing various definitions of it.  We already had #undef LOG in various places in the file.  Just needed to add a couple more to make the warning go away.
Attachment #395639 - Flags: review?(bjarne)
Attachment #395639 - Flags: review?(bjarne) → review+
Keywords: checkin-needed
Comment on attachment 395639 [details] [diff] [review]
patch to fix
[Checkin: Comment 1]


http://hg.mozilla.org/mozilla-central/rev/5f0f97e166f7
Attachment #395639 - Attachment description: patch to fix → patch to fix [Checkin: Comment 1]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite-
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Version: unspecified → Trunk
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: