Bug 511718 - Fix compiler warnings about redefining LOG in necko; r=cbiesinger